--- a/public/css/style.css
+++ b/public/css/style.css
@@ -423,15 +423,18 @@ ol {
 	-ms-transform: scale(0);
 	transform: scale(0);
 }
+.search{
+	margin-top: 35px;
+}
 
 .header__right {
 	text-align: right;
-	padding: 30px 0 10px;
+	padding: 35px 0 10px;
 }
 
 .header__right__auth {
 	display: inline-block;
-	margin-right: 25px;
+	/* margin-right: 25px; */
 }
 
 .header__right__auth a {
@@ -653,7 +656,7 @@ ol {
 
 .discount__text {
 	background: #f4f4f4;
-	height: 390px;
+	height: 100%;
 	padding: 75px 90px 50px;
 	text-align: center;
 }
@@ -1055,39 +1058,56 @@ ol {
 	padding-left: 30px;
 	margin-bottom: 10px;
 	margin-right: 10px;
+	opacity: 80%;
+	
+	
 }
 
 .categories__item.categories__large__item {
+	
 	height: 638px;
 	padding-left: 70px;
+	opacity: 80%;
+	
 }
 
 .categories__item.categories__large__item .categories__text {
-	max-width: 480px;
+    background-color: #ffffff;
+	text-align: center;
+	max-width: 580px;
+
+}
+.categories__text{
+	background-color: hsl(0, 0%, 100%);
+	text-align: center;
+	border-radius: 10%;
 }
 
-.categories__item.categories__large__item .categories__text p {
+/* .categories__item.categories__large__item .categories__text p {
 	margin-bottom: 15px;
-}
+} */
 
 .categories__text h1 {
 	font-family: "Cookie", cursive;
-	color: #111111;
+	color: #ee3b00;
 	margin-bottom: 5px;
+	
 }
 
 .categories__text h4 {
-	color: #111111;
+	
+	color: #ee3b00;
 	font-weight: 700;
 }
 
 .categories__text p {
 	margin-bottom: 10px;
+	color: #0b0903;
 }
 
 .categories__text a {
 	font-size: 14px;
-	color: #111111;
+	color: #000000;
 	text-transform: uppercase;
 	font-weight: 600;
 	position: relative;
